<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/fondoRegistro"
        android:layout_width="420dp"
        android:layout_height="741dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondo02" />

    <EditText
        android:id="@+id/editNombreR"
        android:layout_width="307dp"
        android:layout_height="57dp"
        android:layout_marginBottom="456dp"
        android:background="#8ED8FA"
        android:backgroundTint="#E9DEDEE4"
        android:ems="10"
        android:hint="@string/edt_nombre_usuario"
        android:inputType="textPersonName"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toBottomOf="@+id/fondoRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fondoLogin"
        app:layout_constraintVertical_bias="0.64" />

    <EditText
        android:id="@+id/editApellidoR"
        android:layout_width="307dp"
        android:layout_height="57dp"
        android:layout_marginBottom="348dp"
        android:background="#8ED8FA"
        android:backgroundTint="#E9DEDEE4"
        android:ems="10"
        android:hint="@string/edt_apellidos"
        android:inputType="textPersonName"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toBottomOf="@+id/fondoRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNombreR"
        app:layout_constraintVertical_bias="0.294" />

    <EditText
        android:id="@+id/editPassR"
        android:layout_width="307dp"
        android:layout_height="57dp"
        android:background="#8ED8FA"
        android:backgroundTint="#E9DEDEE4"
        android:ems="10"
        android:hint="@string/edt_contrasenha"
        android:inputType="textPassword"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editApellidoR"
        app:layout_constraintVertical_bias="0.467" />

    <EditText
        android:id="@+id/editCorreoR"
        android:layout_width="307dp"
        android:layout_height="57dp"
        android:background="#8ED8FA"
        android:backgroundTint="#E9DEDEE4"
        android:ems="10"
        android:hint="@string/edt_correo"
        android:inputType="textEmailAddress"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/editPassR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editApellidoR"
        app:layout_constraintVertical_bias="0.084" />

    <EditText
        android:id="@+id/editTelR"
        android:layout_width="307dp"
        android:layout_height="57dp"
        android:background="#8ED8FA"
        android:backgroundTint="#E9DEDEE4"
        android:ems="10"
        android:hint="@string/edt_telefono"
        android:inputType="phone"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/editPassR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCorreoR"
        app:layout_constraintVertical_bias="0.362" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="168dp"
        android:layout_height="70dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#40CCB4"
        android:drawableTint="#FDF6F6"
        android:text="@string/btn_registrar"
        android:textColor="#F6F6F6"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassR"
        app:layout_constraintVertical_bias="0.656" />

    <ImageView
        android:id="@+id/imagenRegistro2"
        android:layout_width="175dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toTopOf="@+id/editNombreR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar4" />


</androidx.constraintlayout.widget.ConstraintLayout>